BATCH-2662: Fix syntax highlighting of Java example in 1.1.1 section  of the documentation

--- a/spring-batch-docs/asciidoc/job.adoc
+++ b/spring-batch-docs/asciidoc/job.adoc
@@ -172,7 +172,7 @@ restartable property may be set to 'false':
 ----
 
 .Java Configuration
-[source, xml, role="javaContent"]
+[source, java, role="javaContent"]
 ----
 @Bean
 public Job footballJob() {
